k8s/observability/signoz/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signoz-route
  namespace: signoz
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gw
      namespace: gateway-internal
      sectionName: https-wild-terminate
  hostnames:
    - signoz.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains; preload"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: X-Frame-Options
                value: "DENY"
      backendRefs:
        - group: ""
          kind: Service
          name: signoz
          port: 8080
          weight: 1
